RESOLVED FIXED323179
bankofamerica.com: cannot complete wire transfer
https://bugs.webkit.org/show_bug.cgi?id=323179
Summary bankofamerica.com: cannot complete wire transfer
Sammy Gill
Reported 2026-09-01 20:21:50 PDT
Attachments
Sammy Gill
Comment 1 2026-09-01 20:37:48 PDT
EWS
Comment 2 2026-09-02 08:49:41 PDT
Committed 320331@main (a4d8f6d0f464): <https://commits.webkit.org/320331@main> Reviewed commits have been landed. Closing PR #72998 and removing active labels.
Sammy Gill
Comment 3 2026-09-02 10:03:42 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/62406
EWS
Comment 4 2026-09-02 22:46:47 PDT
Committed 316606.621@safari-7625-branch (4aa0bc47cb42): <https://commits.webkit.org/316606.621@safari-7625-branch> Reviewed commits have been landed. Closing PR #6594 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.